syntax = "proto3";

import "metrika/core/libs/appmetrica/protos/messages/impl/appmetrica.proto";
import "alice/megamind/protos/common/frame.proto";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

package ru.yandex.alice.paskill.dialogovo.proto;

option java_package = "ru.yandex.alice.paskill.dialogovo.proto";
option java_outer_classname = "ApplyArgsProto";

message ChosenProcessor{
    string ProcessorName = 1 [json_name = "processor_name"];
    google.protobuf.Any Response = 2 [json_name = "response"];
}


message RelevantApplyArgs {
    string SkillId = 1 [json_name = "skill_id"];
    string Request = 2 [json_name = "request"];
    string OriginalUtterance = 3 [json_name = "original_utterance"];
    string Source = 4 [json_name = "source"];
    reserved 5;
    int32 ResumeSessionAfterPlayerStopRequests = 6 [json_name = "resume_session_after_player_stop_requests"];
    bool IsActivation = 7 [json_name = "is_activation"];
    string Payload = 8 [json_name = "payload"];
    NAlice.TActivationTypedSemanticFrameSlot ActivationTypedSemanticFrameSlot = 9 [json_name = "activation_typed_semantic_frame"];
}

message SaveFeedbackApplyArgs {
    string SkillId = 1 [json_name = "skill_id"];
    int32 Mark = 2 [json_name = "mark"];
}

message ReadNewsApplyArgs {
    string SkillId = 1 [json_name = "skill_id"];
    AppmetricaApplyArgs ApplyArgs = 2 [json_name = "apply_args"];
}

message TAudioPlayerEventsApplyArgs {
    string SkillId = 1 [json_name = "skill_id"];
    AppmetricaApplyArgs ApplyArgs = 2 [json_name = "apply_args"];
}

message TPurchaseCompleteApplyArgs {
    string SkillId = 1 [json_name = "skill_id"];
    string PurchaseOfferUuid = 2 [json_name = "purchase_offer_uuid"];
    string InitialDeviceId = 3 [json_name = "initial_device_id"];
}

message TRequestGeolocationSharingApplyArgs {
    string SkillId = 1 [json_name = "skill_id"];
    string NormalizedUtterance = 4 [json_name = "normalized_utterance"];
}

message TCollectWidgetGalleryApplyArgs {
    repeated string SkillIds = 1 [json_name = "skill_ids"];
}

message TCollectTeasersApplyArgs {
    repeated string SkillIds = 1 [json_name = "skill_ids"];
}

message TCollectSkillShowEpisodeApplyArgs {
    string SkillId = 1 [json_name = "skill_id"];
    string ShowType = 2 [json_name = "show_type"];
}

message ApplyArgumentsWrapper {
    string ProcessorType = 1 [json_name = "processor_type"];
    reserved 8;
    oneof Arguments {
        RelevantApplyArgs RequestSkill = 2 [json_name = "request_skill"];
        SaveFeedbackApplyArgs SaveFeedback = 3 [json_name = "save_feedback"];
        // LogNonsenseFeedbackApplyArgs NonsenseFeedback = 4 [json_name = "nonsense_feedback"];
        ReadNewsApplyArgs ReadNews = 5 [json_name = "read_news"];
        TAudioPlayerEventsApplyArgs AudioPlayerEventsApplyArgs = 6 [json_name = "audio_player_events"];
        TPurchaseCompleteApplyArgs PurchaseCompleteApplyArgs = 7 [json_name = "purchase_complete"];
        TRequestGeolocationSharingApplyArgs RequestGeolocationSharingApplyArgs
            = 9 [json_name = "request_geolocation_sharing"];
        TCollectWidgetGalleryApplyArgs CollectWidgetGalleryApplyArgs = 10 [json_name = "widget_gallery"];
        TCollectTeasersApplyArgs CollectTeasersApplyArgs = 11 [json_name = "teasers"];
        TCollectSkillShowEpisodeApplyArgs CollectSkillShowEpisodeApplyArgs = 12 [json_name = "skill_show_episode"];
    }
}

message AppmetricaApplyArgs {
    string Uuid = 1 [json_name = "uuid"];
    string ApiKeyEncrypted = 2 [json_name = "api_key_encrypted"];
    string Uri = 3 [json_name = "uri"];
    int64 EventEpochTime = 4 [json_name = "event_epoch_time"];
    reserved 5;
    ReportMessage ReportMessage = 6 [json_name = "report_message"];
}
